Mon Nov 15 11:33:32 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/DDS_Listen_T.cpp:
        * connectors/dds4ccm/impl/DataReaderListener_T.h:
        * connectors/dds4ccm/impl/DataReaderListener_T.cpp:
          Listening was based on whether the user had a PortStatusListener
          configured (and implemented). Now listening is based on the internal
          listener.

Mon Nov 15 11:11:58 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/DDS_State_Connector_T.cpp:
        * connectors/dds4ccm/impl/DDS_TopicBase_Connector_T.h:
        * connectors/dds4ccm/impl/DDS_TopicBase_Connector_T.cpp:
        * connectors/dds4ccm/impl/DataReaderListener_T.h:
        * connectors/dds4ccm/impl/PublisherListener.h:
        * connectors/dds4ccm/impl/PublisherListener.cpp:
        * connectors/dds4ccm/impl/dds4ccm_impl.mpc:
          PublisherListener is now a C++ class instead of a template

        * connectors/dds4ccm/impl/PublisherListener_T.h:
        * connectors/dds4ccm/impl/PublisherListener_T.cpp:
          Removed these files.

Mon Nov 15 11:12:22 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/DataReaderListener_T.cpp:
          Initialize listening mask to 0.

        * connectors/dds4ccm/impl/ndds/DataReader_T.cpp:
          No need to re-assign instance state mask, view state mask and
          sample mask since they're all unsigned longs.

        * connectors/dds4ccm/impl/ndds/DomainParticipantManager.cpp:
          don't close down typesupport for now.

Mon Nov 15 11:00:15 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * tests/IDL_Test/NonTopic_Connector:
        * tests/IDL_Test/NonTopic_Connector/nontopic_test.idl:
        * tests/IDL_Test/NonTopic_Connector/NonTopic_Connector.mpc:
        * tests/IDL_Test/NonTopic_Connector/NonTopic_Base.idl:
        * tests/IDL_Test/NonTopic_Connector/NonTopic_Connector.idl: